--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CaptainComics - BEST COMICS ON WEB</title>
+    <link rel="icon" href="./img/favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -12,7 +16,6 @@
     <header class="header col-md-9 col-xs-12">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">CaptainComics</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -22,7 +25,7 @@
                     <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./biblioteca.html">Biblioteca</a>
+                    <a class="nav-link" href="./sections/biblioteca.html">Biblioteca</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,10 +45,10 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                    <a class="nav-link" href="./sections/contacto.html">Contacto</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./about.html">Nosotros</a>
+                    <a class="nav-link" href="./sections/about.html">Nosotros</a>
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -56,12 +59,20 @@
             </div>
           </nav>
     </header>
-    <main class="mainIndex col-md-9 col-xs-12">
-
+    <main class="col-md-9 col-xs-12 mainIndex">
+      <div class="col-md-7 col-xs-12 first_container">
+        <div class="main__logo">
+          <div class="main__logo--title">
+            <h1>Captain Comics</h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer class="footer col-md-9 col-xs-12 bg-dark text-center text-white">
+    <footer class="footer col-md-9 col-xs-12 text-center text-white">
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-3">
+          <!-- style="background-color: rgba(0, 0, 0, 0.2);" -->
           2022 Web Design by Nahuel Genchi
         </div>
         <!-- Copyright -->
