--- a/index.html
+++ b/index.html
@@ -1,82 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CaptainComics - BEST COMICS ON WEB</title>
-    <link rel="icon" href="./img/favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CaptainComics - BEST COMICS ON WEB</title>
+  <link rel="icon" href="./img/favicon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Hahmlet:wght@300;400;700&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <header class="header col-md-9 col-xs-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./sections/biblioteca.html">Biblioteca</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Personajes
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Black Widow</a></li>
-                      <li><a class="dropdown-item" href="#">Captain America</a></li>
-                      <li><a class="dropdown-item" href="#">Deadpool</a></li>
-                      <li><a class="dropdown-item" href="#">Hawkeye</a></li>
-                      <li><a class="dropdown-item" href="#">Hulk</a></li>
-                      <li><a class="dropdown-item" href="#">Iron Man</a></li>
-                      <li><a class="dropdown-item" href="#">Spider-Man</a></li>
-                      <li><a class="dropdown-item" href="#">Thor</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Thanos</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./sections/contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./sections/about.html">Nosotros</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main class="col-md-9 col-xs-12 mainIndex">
-      <div class="col-md-7 col-xs-12 first_container">
-        <div class="main__logo">
-          <div class="main__logo--title">
-            <h1>Captain Comics</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </div>
+  <header class="header col-lg-9 col-xs-12">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./sections/biblioteca.html">Biblioteca</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Personajes
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Black Widow</a></li>
+                <li><a class="dropdown-item" href="#">Captain America</a></li>
+                <li><a class="dropdown-item" href="#">Deadpool</a></li>
+                <li><a class="dropdown-item" href="#">Hawkeye</a></li>
+                <li><a class="dropdown-item" href="#">Hulk</a></li>
+                <li><a class="dropdown-item" href="#">Iron Man</a></li>
+                <li><a class="dropdown-item" href="#">Spider-Man</a></li>
+                <li><a class="dropdown-item" href="#">Thor</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Thanos</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./sections/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./sections/about.html">Nosotros</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
         </div>
       </div>
-    </main>
-    <footer class="footer col-md-9 col-xs-12 text-center text-white">
-        <!-- Copyright -->
+    </nav>
+  </header>
+  <main class="col-lg-9 col-xs-12 mainIndex">
+    <div class="col-lg-7 col-xs-12 first_container">
+      <div class="main__logo">
+        <div class="main__logo--title">
+          <h1>Captain Comics</h1>
+          <p>Tus cómics favoritos en un solo lugar.</p>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid second_container">
+      <div class="row">
+        <div class="col-lg-12 col-xs-12 fir_row colEdit">
+          <a href="./sections/biblioteca.html"><h2>BIBLIOTECA</h2></a>
+        </div>
+        <div class="col-lg-12 col-xs-12 sec_row colEdit">
+          <a href="./sections/personajes.html"><h2>PERSONAJES</h2></a>
+        </div>
+        <div class="col-lg-12 col-xs-12 thi_row colEdit">
+          <a href="./sections/contacto.html"><h2>CONTACTO</h2></a>
+        </div>
+        <div class="col-lg-12 col-xs-12 fou_row colEdit">
+          <a href="./sections/about.html"><h2>ACERCA DE MI</h2></a>
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- <footer class="footer col-lg-9 col-xs-12 text-center text-white">
         <div class="text-center p-3">
-          <!-- style="background-color: rgba(0, 0, 0, 0.2);" -->
           2022 Web Design by Nahuel Genchi
         </div>
-        <!-- Copyright -->
-      </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      </footer> -->
+  <footer class="col-lg-9 col-xs-12 bg-light text-center text-lg-start footer">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a class="text-dark" href="https://github.com/NahuelGenchi" target="_blank">Nahuel Genchi</a>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+
 </html>
