--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="./sections/contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./sections/about.html">Nosotros</a>
+              <a class="nav-link" href="./sections/about.html">Acerca de mí</a>
             </li>
           </ul>
           <form class="d-flex">
