--- a/sections/about.html
+++ b/sections/about.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html">Acerda de mí</a>
+              <a class="nav-link" href="./about.html">Acerca de mí</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -77,11 +77,9 @@
       </div>
     </div>
   </main>
-  <footer class="col-lg-9 col-xs-12 bg-light text-center text-lg-start footer">
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2022 Copyright:
-      <a class="text-dark" href="https://github.com/NahuelGenchi" target="_blank">Nahuel Genchi</a>
-    </div>
+  <footer class="col-lg-9 col-xs-12 footer">
+    <span>© 2022 Copyright:&#160</span>
+    <span><a href="https://github.com/NahuelGenchi" target="_blank">Nahuel Genchi</a></span>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
