--- a/sections/biblioteca.html
+++ b/sections/biblioteca.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html">Acerda de mí</a>
+              <a class="nav-link" href="./about.html">Acerca de mí</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -76,12 +76,88 @@
         </div>
       </div>
     </div>
-  </main>
-  <footer class="col-lg-9 col-xs-12 bg-light text-center text-lg-start footer">
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2022 Copyright:
-      <a class="text-dark" href="https://github.com/NahuelGenchi" target="_blank">Nahuel Genchi</a>
+    <div class="container comicContainer">
+      <div class="row">
+        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_fir">
+          <a href="#">
+            <div class="comicThumbnail-dark">
+              <h5>The Amazing Spider-Man</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_2">
+          <a href="#">
+            <div class="comicThumbnail-dark">
+              <h5>Captain America</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_3">
+          <a href="#">
+            <div class="comicThumbnail-dark">
+              <h5>Thanos</h5>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_4">
+          <a href="#">
+            <div class="comicThumbnail-dark">
+              <h5>Marvel Zombies</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_5">
+          <a href="#">
+            <div class="comicThumbnail-dark">
+              <h5>The Invincible Iron Man</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_6">
+          <a href="#">
+            <div class="comicThumbnail-dark">
+              <h5>The Mighty Thor</h5>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_7">
+          <a href="#">
+            <div class="comicThumbnail-dark">
+              <h5>The Avengers</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_8">
+          <a href="#">
+            <div class="comicThumbnail-dark">
+              <h5>The X-Men</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_9">
+          <a href="#">
+            <div class="comicThumbnail-dark">
+              <h5>Galactus</h5>
+            </div>
+          </a>
+        </div>
+      </div>
     </div>
+    <div class="nextPage_container">
+      <div class="nextPage">
+        <a class="activeLink" href="./biblioteca.html">1</a>
+        <a href="./biblioteca/biblioteca_dos.html">2</a>
+        <a href="./biblioteca/biblioteca_tres.html">3</a>
+      </div>
+    </div>
+  </main>
+  <footer class="col-lg-9 col-xs-12 footer">
+    <span>© 2022 Copyright:&#160</span>
+    <span><a href="https://github.com/NahuelGenchi" target="_blank">Nahuel Genchi</a></span>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
