--- a/index.html
+++ b/index.html
@@ -77,16 +77,24 @@
     <div class="container-fluid second_container">
       <div class="row">
         <div class="col-lg-12 col-xs-12 fir_row colEdit">
-          <a href="./sections/biblioteca.html"><h2>BIBLIOTECA</h2></a>
+          <div class="colClick" onclick="location.href='./sections/biblioteca.html';">
+            <h2>BIBLIOTECA</h2>
+          </div>
         </div>
         <div class="col-lg-12 col-xs-12 sec_row colEdit">
-          <a href="./sections/personajes.html"><h2>PERSONAJES</h2></a>
+          <div class="colClick" onclick="location.href='./sections/personajes.html';">
+            <h2>PERSONAJES</h2>
+          </div>
         </div>
         <div class="col-lg-12 col-xs-12 thi_row colEdit">
-          <a href="./sections/contacto.html"><h2>CONTACTO</h2></a>
+          <div class="colClick" onclick="location.href='./sections/contacto.html';">
+            <h2>CONTACTO</h2>
+          </div>
         </div>
         <div class="col-lg-12 col-xs-12 fou_row colEdit">
-          <a href="./sections/about.html"><h2>ACERCA DE MI</h2></a>
+          <div class="colClick" onclick="location.href='./sections/about.html';">
+            <h2>ACERCA DE MÍ</h2>
+          </div>
         </div>
       </div>
     </div>
