--- a/sections/comics/amazing_spider-man.html
+++ b/sections/comics/amazing_spider-man.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaptainComics - Biblioteca</title>
-  <link rel="icon" href="../img/favicon.png">
+  <title>CaptainComics - The Amazing Spider-Man</title>
+  <link rel="icon" href="../../img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Hahmlet:wght@300;400;700&display=swap"
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
@@ -27,10 +27,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./biblioteca.html">Biblioteca</a>
+              <a class="nav-link" href="../biblioteca.html">Biblioteca</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -53,10 +53,10 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">Contacto</a>
+              <a class="nav-link" href="../contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html">Acerca de mí</a>
+              <a class="nav-link" href="../about.html">Acerca de mí</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -74,83 +74,8 @@
         <p>Tus cómics favoritos en un solo lugar.</p>
       </div>
     </div>
-    <div class="container comicContainer">
-      <div class="row">
-        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_fir">
-          <a href="./comics/amazing_spider-man.html">
-            <div class="comicThumbnail-dark">
-              <h5>The Amazing Spider-Man</h5>
-            </div>
-          </a>
-        </div>
-        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_2">
-          <a href="#">
-            <div class="comicThumbnail-dark">
-              <h5>Captain America</h5>
-            </div>
-          </a>
-        </div>
-        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_3">
-          <a href="#">
-            <div class="comicThumbnail-dark">
-              <h5>Thanos</h5>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_4">
-          <a href="#">
-            <div class="comicThumbnail-dark">
-              <h5>Marvel Zombies</h5>
-            </div>
-          </a>
-        </div>
-        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_5">
-          <a href="#">
-            <div class="comicThumbnail-dark">
-              <h5>The Invincible Iron Man</h5>
-            </div>
-          </a>
-        </div>
-        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_6">
-          <a href="#">
-            <div class="comicThumbnail-dark">
-              <h5>The Mighty Thor</h5>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_7">
-          <a href="#">
-            <div class="comicThumbnail-dark">
-              <h5>The Avengers</h5>
-            </div>
-          </a>
-        </div>
-        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_8">
-          <a href="#">
-            <div class="comicThumbnail-dark">
-              <h5>The X-Men</h5>
-            </div>
-          </a>
-        </div>
-        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_9">
-          <a href="#">
-            <div class="comicThumbnail-dark">
-              <h5>Galactus</h5>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="nextPage_container">
-      <div class="nextPage">
-        <a class="activeLink" href="./biblioteca.html">1</a>
-        <a href="./biblioteca/biblioteca_dos.html">2</a>
-        <a href="./biblioteca/biblioteca_tres.html">3</a>
-      </div>
+    <div class="col-lg-7 col-xs-12 ">
+
     </div>
   </main>
   <footer class="col-lg-9 col-xs-12 footer">
