--- a/sections/biblioteca.html
+++ b/sections/biblioteca.html
@@ -84,14 +84,14 @@
           </a>
         </div>
         <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_2">
-          <a href="#">
+          <a href="./comics/captain_america.html">
             <div class="comicThumbnail-dark">
               <h5>Captain America</h5>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_3">
-          <a href="#">
+          <a href="./comics/thanos.html">
             <div class="comicThumbnail-dark">
               <h5>Thanos</h5>
             </div>
@@ -100,21 +100,21 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_4">
-          <a href="#">
+          <a href="./comics/marvel_zombies.html">
             <div class="comicThumbnail-dark">
               <h5>Marvel Zombies</h5>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_5">
-          <a href="#">
+          <a href="./comics/iron_man.html">
             <div class="comicThumbnail-dark">
               <h5>The Invincible Iron Man</h5>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_6">
-          <a href="#">
+          <a href="./comics/mighty_thor.html">
             <div class="comicThumbnail-dark">
               <h5>The Mighty Thor</h5>
             </div>
@@ -123,21 +123,21 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_7">
-          <a href="#">
+          <a href="./comics/the_avengers.html">
             <div class="comicThumbnail-dark">
               <h5>The Avengers</h5>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_8">
-          <a href="#">
+          <a href="./comics/the_x-men.html">
             <div class="comicThumbnail-dark">
               <h5>The X-Men</h5>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_9">
-          <a href="#">
+          <a href="./comics/galactus.html">
             <div class="comicThumbnail-dark">
               <h5>Galactus</h5>
             </div>
