--- a/sections/comics/captain_america.html
+++ b/sections/comics/captain_america.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaptainComics - The Amazing Spider-Man</title>
+  <title>CaptainComics - Captain America Comics</title>
   <link rel="icon" href="../../img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,19 +77,18 @@
     <div class="col-lg-12 col-xs-12 container-fluid">
       <div class="row col-lg-12 col-xs-12">
         <div class="col-lg-4 col-xs-12 comicBigContainer">
-          <div class="comicThumbnail comicThumnail_fir">
+          <div class="comicThumbnail comicThumnail_2">
 
           </div>
           <div class="comicTitle">
-            <h6>The Amazing Spider-Man #1</h6>
+            <h6>Captain America Comics #1</h6>
           </div>
         </div>
         <div class="col-lg-8 col-xs-12 comicExplain">
           <div class="comicExplainContainer">
-            <h3>The Amazing Spider-Man #1</h3>
-            <p>The Amazing Spider-Man Vol #1 es un cómic del primer volumen de The Amazing Spider-Man, publicado por Marvel Comics en marzo de 1963.</p>
-            <p>La primera historia, denominada simplemente como Spider-Man, se centra en Peter Parker / Spider-Man, quien ayuda a John Jameson después de que su cápsula espacial se descontrolara.</p>
-            <p>La segunda historia, denominada ¡Spider-Man contra Chameleon!, se centra en Peter Parker / Spider-Man, quien irrumpe en el Edificio Baxter para pedirle a Fantastic Four que le permitan unirse al equipo. Más adelante, Spider-Man se enfrenta contra un hombre conocido como Chameleon después de que éste último cometiera unos robos disfrazados de Spider-Man.</p>
+            <h3>Captain America Comics #1</h3>
+            <p>¿Qué mejor manera de presentar a un héroe vestido con la bandera de Estados Unidos durante la Segunda Guerra Mundial que mostrándolo engalanando a Hitler? Simple y efectivo, tenemos que agradecer a Joe Simon y Jack Kirby por este.</p>
+            <p>Simon y Kirby crearon a Steve Rogers, un posible alistado del ejército rechazado por los reclutadores debido a su pequeño tamaño. Rogers se ofrece como voluntario para recibir un suero de alto secreto y se transforma en un "súper soldado". Apodado Capitán América y vestido con un traje rojo, blanco y azul con un escudo de barras y estrellas a juego, Rogers se une al Ejército de los EE. paliza.</p>
           </div>
         </div>
       </div>
