--- a/sections/comics/iron_man.html
+++ b/sections/comics/iron_man.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaptainComics - The Amazing Spider-Man</title>
+  <title>CaptainComics - Iron Man</title>
   <link rel="icon" href="../../img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,19 +77,17 @@
     <div class="col-lg-12 col-xs-12 container-fluid">
       <div class="row col-lg-12 col-xs-12">
         <div class="col-lg-4 col-xs-12 comicBigContainer">
-          <div class="comicThumbnail comicThumnail_fir">
+          <div class="comicThumbnail comicThumnail_5">
 
           </div>
           <div class="comicTitle">
-            <h6>The Amazing Spider-Man #1</h6>
+            <h6>Iron Man #1</h6>
           </div>
         </div>
         <div class="col-lg-8 col-xs-12 comicExplain">
           <div class="comicExplainContainer">
-            <h3>The Amazing Spider-Man #1</h3>
-            <p>The Amazing Spider-Man Vol #1 es un cómic del primer volumen de The Amazing Spider-Man, publicado por Marvel Comics en marzo de 1963.</p>
-            <p>La primera historia, denominada simplemente como Spider-Man, se centra en Peter Parker / Spider-Man, quien ayuda a John Jameson después de que su cápsula espacial se descontrolara.</p>
-            <p>La segunda historia, denominada ¡Spider-Man contra Chameleon!, se centra en Peter Parker / Spider-Man, quien irrumpe en el Edificio Baxter para pedirle a Fantastic Four que le permitan unirse al equipo. Más adelante, Spider-Man se enfrenta contra un hombre conocido como Chameleon después de que éste último cometiera unos robos disfrazados de Spider-Man.</p>
+            <h3>Iron Man #1</h3>
+            <p>El problema comienza con Iron Man / Tony Stark que acaba de escapar de una trampa mortal de Maggia a tiempo para salvar a Jasper Sitwell de Whiplash, cuando es golpeado por el Vortex Suction Beam de AIM y atraviesa el casco de la nave en la que estaban, causando se hunde cuando AIM desconecta su submarino. A continuación, Iron Man es llevado a la base de A.I.M. mientras Jasper Sitwell rescata a Whitney Frost, una aparente miembro de la alta sociedad y admiradora de Tony, levantándola y saltando por la borda. Los dos son sacados del agua por un S.H.I.E.L.D. aerodeslizador tripulado por Nick Fury, Dum Dum Dugan y Gabe Jones. Después de que aterrizan, Whitney besa a Sitwell para mostrar su gratitud por salvarla, pero más tarde, en su habitación, se revela que Whitney es Big M, líder de Maggia, que busca obtener acceso a las súper armas de Tony Stark que cree que podrá. hacer con la ayuda de Sitwell.</p>
           </div>
         </div>
       </div>
