--- a/sections/comics/the_avengers.html
+++ b/sections/comics/the_avengers.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaptainComics - The Amazing Spider-Man</title>
+  <title>CaptainComics - The Avengers</title>
   <link rel="icon" href="../../img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,19 +77,17 @@
     <div class="col-lg-12 col-xs-12 container-fluid">
       <div class="row col-lg-12 col-xs-12">
         <div class="col-lg-4 col-xs-12 comicBigContainer">
-          <div class="comicThumbnail comicThumnail_fir">
+          <div class="comicThumbnail comicThumnail_7">
 
           </div>
           <div class="comicTitle">
-            <h6>The Amazing Spider-Man #1</h6>
+            <h6>The Avengers #1</h6>
           </div>
         </div>
         <div class="col-lg-8 col-xs-12 comicExplain">
           <div class="comicExplainContainer">
-            <h3>The Amazing Spider-Man #1</h3>
-            <p>The Amazing Spider-Man Vol #1 es un cómic del primer volumen de The Amazing Spider-Man, publicado por Marvel Comics en marzo de 1963.</p>
-            <p>La primera historia, denominada simplemente como Spider-Man, se centra en Peter Parker / Spider-Man, quien ayuda a John Jameson después de que su cápsula espacial se descontrolara.</p>
-            <p>La segunda historia, denominada ¡Spider-Man contra Chameleon!, se centra en Peter Parker / Spider-Man, quien irrumpe en el Edificio Baxter para pedirle a Fantastic Four que le permitan unirse al equipo. Más adelante, Spider-Man se enfrenta contra un hombre conocido como Chameleon después de que éste último cometiera unos robos disfrazados de Spider-Man.</p>
+            <h3>The Avengers #1</h3>
+            <p>Loki pretende atraer a Thor a una trampa en la isla del Silencio, para ello trama un engaño, provoca un accidente de tren haciendo parecer que Hulk es el responsable. Rick Jones intenta avisar a los Cuatro Fantásticos para que intenten encontrar a Hulk antes de que lo haga el ejercito, pero su radioseñal es desviada por Loki para que sea escuchada por Thor, aunque también será escuchada por Iron Man, la Avispa y el Hombre Hormiga. En la sede de la Brigada Juvenil todos ellos son puestos al corriente de la situación, Thor desaparece persiguiendo a un falso Hulk, lo que le moverá a ir a la isla de Silencio a combatir con Loki. Por otra parte el resto de héroes intentan hacer entrar en razón al verdadero Hulk que está escondido en un circo haciéndose pasar por un robot. Finalmente Thor derrota a Loki y lo lleva a la Tierra para que confiese su engaño. Los cinco héroes, a sugerencia de la Avispa y el Hombre Hormiga, deciden unirse y formar Los Vengadores.</p>
           </div>
         </div>
       </div>
