--- a/sections/comics/mighty_thor.html
+++ b/sections/comics/mighty_thor.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaptainComics - The Amazing Spider-Man</title>
+  <title>CaptainComics - The Mighty Thor</title>
   <link rel="icon" href="../../img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,19 +77,17 @@
     <div class="col-lg-12 col-xs-12 container-fluid">
       <div class="row col-lg-12 col-xs-12">
         <div class="col-lg-4 col-xs-12 comicBigContainer">
-          <div class="comicThumbnail comicThumnail_fir">
+          <div class="comicThumbnail comicThumnail_6">
 
           </div>
           <div class="comicTitle">
-            <h6>The Amazing Spider-Man #1</h6>
+            <h6>Journey into Mystery #83</h6>
           </div>
         </div>
         <div class="col-lg-8 col-xs-12 comicExplain">
           <div class="comicExplainContainer">
-            <h3>The Amazing Spider-Man #1</h3>
-            <p>The Amazing Spider-Man Vol #1 es un cómic del primer volumen de The Amazing Spider-Man, publicado por Marvel Comics en marzo de 1963.</p>
-            <p>La primera historia, denominada simplemente como Spider-Man, se centra en Peter Parker / Spider-Man, quien ayuda a John Jameson después de que su cápsula espacial se descontrolara.</p>
-            <p>La segunda historia, denominada ¡Spider-Man contra Chameleon!, se centra en Peter Parker / Spider-Man, quien irrumpe en el Edificio Baxter para pedirle a Fantastic Four que le permitan unirse al equipo. Más adelante, Spider-Man se enfrenta contra un hombre conocido como Chameleon después de que éste último cometiera unos robos disfrazados de Spider-Man.</p>
+            <h3>Journey into Mystery Vol #83</h3>
+            <p>Donald Blake, un médico de los Estados Unidos, está de visita en Noruega. Al mismo tiempo, una nave de Saturno aterriza cerca como exploradores avanzados para una invasión planeada. Un pescador local los ve y alerta a los aldeanos, pero lo despiden. Blake escucha y va a buscar por sí mismo. Cuando pisa una ramita, los extraterrestres lo notan. Huye a los cerros, donde pierde su bastón. Corre hacia una cueva, pero la otra entrada está bloqueada por una roca gigante. Se abre una puerta secreta que revela una cámara donde Blake encuentra un bastón. Intenta mover la roca con el palo, pero no puede hacer palanca. Frustrado, golpea la roca con el palo y, en un destello de luz, el palo se transforma en un martillo, transformando a Blake en Thor, el mítico dios nórdico del trueno.</p>
           </div>
         </div>
       </div>
