--- a/sections/comics/thanos.html
+++ b/sections/comics/thanos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaptainComics - The Amazing Spider-Man</title>
+  <title>CaptainComics - Thanos</title>
   <link rel="icon" href="../../img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,19 +77,18 @@
     <div class="col-lg-12 col-xs-12 container-fluid">
       <div class="row col-lg-12 col-xs-12">
         <div class="col-lg-4 col-xs-12 comicBigContainer">
-          <div class="comicThumbnail comicThumnail_fir">
+          <div class="comicThumbnail comicThumnail_3">
 
           </div>
           <div class="comicTitle">
-            <h6>The Amazing Spider-Man #1</h6>
+            <h6>Thanos #1</h6>
           </div>
         </div>
         <div class="col-lg-8 col-xs-12 comicExplain">
           <div class="comicExplainContainer">
-            <h3>The Amazing Spider-Man #1</h3>
-            <p>The Amazing Spider-Man Vol #1 es un cómic del primer volumen de The Amazing Spider-Man, publicado por Marvel Comics en marzo de 1963.</p>
-            <p>La primera historia, denominada simplemente como Spider-Man, se centra en Peter Parker / Spider-Man, quien ayuda a John Jameson después de que su cápsula espacial se descontrolara.</p>
-            <p>La segunda historia, denominada ¡Spider-Man contra Chameleon!, se centra en Peter Parker / Spider-Man, quien irrumpe en el Edificio Baxter para pedirle a Fantastic Four que le permitan unirse al equipo. Más adelante, Spider-Man se enfrenta contra un hombre conocido como Chameleon después de que éste último cometiera unos robos disfrazados de Spider-Man.</p>
+            <h3>Thanos #1</h3>
+            <p>El villano más poderoso y enigmático del Universo Marvel está tomando el centro del escenario. Los intentos de conquista y destrucción de Thanos han sido frustrados. Entonces, ¿qué demonios internos conducen al Titán loco hacia sus objetivos … y qué deseos ocultos atraen su corazón y su mente ahora?</p>
+            <p>Thanos medita solo en un planeta desolado. Cuando un gran dragón espacial se acerca y lo amenaza, es ahuyentado por una explosión de energía de Adam Warlock, quien dice que es una especie benévola simplemente atraída por la producción de energía de Thanos. Inicialmente afirmando estar molesto por la repentina llegada de Warlock, Thanos, sin embargo, comparte sus pensamientos. Dice que fue responsable de destruir la vida en Rigel-3 donde se sienta, y le cuenta todo su origen a Warlock.</p>
           </div>
         </div>
       </div>
