--- a/sections/comics/the_x-men.html
+++ b/sections/comics/the_x-men.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaptainComics - The Amazing Spider-Man</title>
+  <title>CaptainComics - The X-Men</title>
   <link rel="icon" href="../../img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,19 +77,18 @@
     <div class="col-lg-12 col-xs-12 container-fluid">
       <div class="row col-lg-12 col-xs-12">
         <div class="col-lg-4 col-xs-12 comicBigContainer">
-          <div class="comicThumbnail comicThumnail_fir">
+          <div class="comicThumbnail comicThumnail_8">
 
           </div>
           <div class="comicTitle">
-            <h6>The Amazing Spider-Man #1</h6>
+            <h6>The X-Men #1</h6>
           </div>
         </div>
         <div class="col-lg-8 col-xs-12 comicExplain">
           <div class="comicExplainContainer">
-            <h3>The Amazing Spider-Man #1</h3>
-            <p>The Amazing Spider-Man Vol #1 es un cómic del primer volumen de The Amazing Spider-Man, publicado por Marvel Comics en marzo de 1963.</p>
-            <p>La primera historia, denominada simplemente como Spider-Man, se centra en Peter Parker / Spider-Man, quien ayuda a John Jameson después de que su cápsula espacial se descontrolara.</p>
-            <p>La segunda historia, denominada ¡Spider-Man contra Chameleon!, se centra en Peter Parker / Spider-Man, quien irrumpe en el Edificio Baxter para pedirle a Fantastic Four que le permitan unirse al equipo. Más adelante, Spider-Man se enfrenta contra un hombre conocido como Chameleon después de que éste último cometiera unos robos disfrazados de Spider-Man.</p>
+            <h3>The X-Men #1</h3>
+            <p>En la Escuela de Xavier para Jóvenes Superdotados en el condado de Westchester, Nueva York, el profesor Charles Xavier convoca a sus alumnos telepáticamente. Cuando la Bestia, Ángel, Hombre de hielo y Cyclops llegan, los somete a una serie de ejercicios para perfeccionar sus talentos mutantes. Xavier luego les presenta a un nuevo estudiante, Marvel Girl, a quien explica el propósito de su escuela: sus estudiantes reciben una educación, pero también son la primera línea de defensa contra los malvados mutantes.</p>
+            <p>Primera aparición de Cyclops; Primera Aparición de Bestia, Primera Aparición de Ángel; Primera aparición de Marvel Girl; Primera aparición de Iceman; Primera aparición de Magneto; Primera Aparición del Profesor X; Primer número de cómic de X-Men.</p>
           </div>
         </div>
       </div>
