Adding extend to comics and info.html. Adding  mixin, map and each to info.html

--- a/sections/info.html
+++ b/sections/info.html
@@ -74,6 +74,15 @@
         <p>Tus cómics favoritos en un solo lugar.</p>
       </div>
     </div>
+    <div class="infoBigContainer">
+      <div class="infoContainer">
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p><span class="spanLorem">Lorem</span> ipsum dolor sit amet consectetur, adipisicing elit. Totam architecto alias nesciunt deleniti illum natus, blanditiis quod exercitationem quam nulla.</p>
+        <p>Lorem <span class="spanIpsum">ipsum</span> dolor sit, amet consectetur adipisicing elit. Quisquam, sequi, repellendus nobis quidem id quam aliquid itaque officia ipsa deserunt aut libero, debitis ullam placeat maxime. Doloribus hic iusto sapiente, dolor molestiae amet voluptas aliquam eum soluta enim expedita? Sed!</p>
+        <p>Lorem, ipsum <span class="spanDolor">dolor</span> sit amet consectetur adipisicing elit. Ratione incidunt voluptates sapiente. Vero earum praesentium sit optio veritatis vitae, nisi deleniti. Cum totam veritatis tempore explicabo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing <span class="spanElit">elit</span>. Corporis, quo ex? Alias aut tempora nulla!</p>
+      </div>
+    </div>
   </main>
   <footer class="col-lg-9 col-xs-12 footer">
     <span>© 2022 Copyright:&#160</span>
