Little SEO changes

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <meta name="description" content="Leer los mejores cómics de Marvel acá.">
-  <meta name="keywords" content="Comics, Marvel, Spider-Man, Thor, Iron Man, Thanos">
+  <meta name="description" content="Lea los mejores cómics de Marvel acá.">
+  <meta name="keywords" content="Comics, Marvel, Spider-Man, Thor, Iron Man, Thanos, Leer, Online">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
