Adding content to personajes.html

--- a/sections/personajes.html
+++ b/sections/personajes.html
@@ -38,14 +38,14 @@
                 Personajes
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Black Widow</a></li>
-                <li><a class="dropdown-item" href="#">Captain America</a></li>
-                <li><a class="dropdown-item" href="#">Deadpool</a></li>
-                <li><a class="dropdown-item" href="#">Hawkeye</a></li>
-                <li><a class="dropdown-item" href="#">Hulk</a></li>
-                <li><a class="dropdown-item" href="#">Iron Man</a></li>
-                <li><a class="dropdown-item" href="#">Spider-Man</a></li>
-                <li><a class="dropdown-item" href="#">Thor</a></li>
+                <li><a class="dropdown-item" href="./characters/black_widow.html">Black Widow</a></li>
+                <li><a class="dropdown-item" href="./characters/captain_america.html">Captain America</a></li>
+                <li><a class="dropdown-item" href="./characters/deadpool.html">Deadpool</a></li>
+                <li><a class="dropdown-item" href="./characters/hawkeye.html">Hawkeye</a></li>
+                <li><a class="dropdown-item" href="./characters/hulk.html">Hulk</a></li>
+                <li><a class="dropdown-item" href="./characters/iron_man.html">Iron Man</a></li>
+                <li><a class="dropdown-item" href="./characters/spider-man.html">Spider-Man</a></li>
+                <li><a class="dropdown-item" href="./characters/thor.html">Thor</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -56,7 +56,7 @@
               <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./info.html">Acerda de mí</a>
+              <a class="nav-link" href="./info.html">Info</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -72,6 +72,71 @@
       <div class="main__logo--title">
         <h1>Captain Comics</h1>
         <p>Tus cómics favoritos en un solo lugar.</p>
+      </div>
+    </div>
+    <div class="container characterContainer">
+      <div class="row">
+        <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_1">
+          <a href="./characters/black_widow.html">
+            <div class="characterThumbnail-dark">
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_2">
+          <a href="./characters/captain_america.html">
+            <div class="characterThumbnail-dark">
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_3">
+          <a href="./characters/deadpool.html">
+            <div class="characterThumbnail-dark">
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_4">
+          <a href="./characters/hawkeye.html">
+            <div class="characterThumbnail-dark">
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_5">
+          <a href="./characters/hulk.html">
+            <div class="characterThumbnail-dark">
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_6">
+          <a href="./characters/iron_man.html">
+            <div class="characterThumbnail-dark">
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_7">
+          <a href="./comics/the_avengers.html">
+            <div class="characterThumbnail-dark">
+              <h5>Spider-Man</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_8">
+          <a href="./comics/the_x-men.html">
+            <div class="characterThumbnail-dark">
+              <h5>Thor</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_9">
+          <a href="./comics/galactus.html">
+            <div class="characterThumbnail-dark">
+              <h5>Thanos</h5>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </main>
