--- a/sections/biblioteca.html
+++ b/sections/biblioteca.html
@@ -38,18 +38,18 @@
                 Personajes
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Black Widow</a></li>
-                <li><a class="dropdown-item" href="#">Captain America</a></li>
-                <li><a class="dropdown-item" href="#">Deadpool</a></li>
-                <li><a class="dropdown-item" href="#">Hawkeye</a></li>
-                <li><a class="dropdown-item" href="#">Hulk</a></li>
-                <li><a class="dropdown-item" href="#">Iron Man</a></li>
-                <li><a class="dropdown-item" href="#">Spider-Man</a></li>
-                <li><a class="dropdown-item" href="#">Thor</a></li>
+                <li><a class="dropdown-item" href="./characters/black_widow.html">Black Widow</a></li>
+                <li><a class="dropdown-item" href="./characters/captain_america.html">Captain America</a></li>
+                <li><a class="dropdown-item" href="./characters/deadpool.html">Deadpool</a></li>
+                <li><a class="dropdown-item" href="./characters/hawkeye.html">Hawkeye</a></li>
+                <li><a class="dropdown-item" href="./characters/hulk.html">Hulk</a></li>
+                <li><a class="dropdown-item" href="./characters/iron_man.html">Iron Man</a></li>
+                <li><a class="dropdown-item" href="./characters/spider-man.html">Spider-Man</a></li>
+                <li><a class="dropdown-item" href="./characters/thor.html">Thor</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Thanos</a></li>
+                <li><a class="dropdown-item" href="./characters/thanos.html">Thanos</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -76,7 +76,7 @@
     </div>
     <div class="container comicContainer">
       <div class="row">
-        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_fir">
+        <div class="col-xs-12 col-lg-4 comicThumbnail comicThumnail_1">
           <a href="./comics/amazing_spider-man.html">
             <div class="comicThumbnail-dark">
               <h5>The Amazing Spider-Man</h5>
@@ -143,13 +143,6 @@
             </div>
           </a>
         </div>
-      </div>
-    </div>
-    <div class="nextPage_container">
-      <div class="nextPage">
-        <a class="activeLink" href="./biblioteca.html">1</a>
-        <a href="./biblioteca/biblioteca_dos.html">2</a>
-        <a href="./biblioteca/biblioteca_tres.html">3</a>
       </div>
     </div>
   </main>
