--- a/sections/characters/thor.html
+++ b/sections/characters/thor.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaptainComics - The Avengers</title>
+  <title>CaptainComics - Thor</title>
   <link rel="icon" href="../../img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,18 +38,18 @@
                 Personajes
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="../characters/black_widow.html">Black Widow</a></li>
-                <li><a class="dropdown-item" href="../characters/captain_america.html">Captain America</a></li>
-                <li><a class="dropdown-item" href="../characters/deadpool.html">Deadpool</a></li>
-                <li><a class="dropdown-item" href="../characters/hawkeye.html">Hawkeye</a></li>
-                <li><a class="dropdown-item" href="../characters/hulk.html">Hulk</a></li>
-                <li><a class="dropdown-item" href="../characters/iron_man.html">Iron Man</a></li>
-                <li><a class="dropdown-item" href="../characters/spider-man.html">Spider-Man</a></li>
-                <li><a class="dropdown-item" href="../characters/thor.html">Thor</a></li>
+                <li><a class="dropdown-item" href="./black_widow.html">Black Widow</a></li>
+                <li><a class="dropdown-item" href="./captain_america.html">Captain America</a></li>
+                <li><a class="dropdown-item" href="./deadpool.html">Deadpool</a></li>
+                <li><a class="dropdown-item" href="./hawkeye.html">Hawkeye</a></li>
+                <li><a class="dropdown-item" href="./hulk.html">Hulk</a></li>
+                <li><a class="dropdown-item" href="./iron_man.html">Iron Man</a></li>
+                <li><a class="dropdown-item" href="./spider-man.html">Spider-Man</a></li>
+                <li><a class="dropdown-item" href="./thor.html">Thor</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="../characters/thanos.html">Thanos</a></li>
+                <li><a class="dropdown-item" href="./thanos.html">Thanos</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -67,7 +67,7 @@
       </div>
     </nav>
   </header>
-  <main class="col-lg-9 col-xs-12 mainComics">
+  <main class="col-lg-9 col-xs-12 mainCharacter">
     <div class="col-lg-12 col-xs-12 first_container">
       <div class="main__logo--title">
         <h1>Captain Comics</h1>
@@ -76,18 +76,25 @@
     </div>
     <div class="col-lg-12 col-xs-12 container-fluid">
       <div class="row col-lg-12 col-xs-12">
-        <div class="col-lg-4 col-xs-12 comicBigContainer">
-          <div class="comicThumbnail comicThumnail_7">
+        <div class="col-md-4 col-xs-12 characterBigContainer">
+          <div class="characterThumbnail characterThumnail_8">
 
           </div>
-          <div class="comicTitle">
-            <h6>The Avengers #1</h6>
+          <div class="characterTitle">
+            <h5>Thor</h5>
+            <p>Thor Odinson</p>
+            <p>Superhero</p>
+            <p>First appearance:</p>
+            <p>Journey into Mystery #83</p>
+            <p>(August 1962)</p>
           </div>
         </div>
-        <div class="col-lg-8 col-xs-12 comicExplain">
-          <div class="comicExplainContainer">
-            <h3>The Avengers #1</h3>
-            <p>Loki pretende atraer a Thor a una trampa en la isla del Silencio, para ello trama un engaño, provoca un accidente de tren haciendo parecer que Hulk es el responsable. Rick Jones intenta avisar a los Cuatro Fantásticos para que intenten encontrar a Hulk antes de que lo haga el ejercito, pero su radioseñal es desviada por Loki para que sea escuchada por Thor, aunque también será escuchada por Iron Man, la Avispa y el Hombre Hormiga. En la sede de la Brigada Juvenil todos ellos son puestos al corriente de la situación, Thor desaparece persiguiendo a un falso Hulk, lo que le moverá a ir a la isla de Silencio a combatir con Loki. Por otra parte el resto de héroes intentan hacer entrar en razón al verdadero Hulk que está escondido en un circo haciéndose pasar por un robot. Finalmente Thor derrota a Loki y lo lleva a la Tierra para que confiese su engaño. Los cinco héroes, a sugerencia de la Avispa y el Hombre Hormiga, deciden unirse y formar Los Vengadores.</p>
+        <div class="col-md-8 col-xs-12 characterExplain">
+          <div class="characterExplainContainer">
+            <h3>Thor</h3>
+            <p>Thor (Thor Odinson) es un superhéroe ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. El personaje, que se basa en la deidad nórdica homónima, es el dios del trueno asgardiano poseedor del martillo encantado, Mjolnir, que le otorga la capacidad de volar y manipular el clima entre sus otros atributos sobrehumanos.</p>
+            <p>Debutando en la Edad de Plata de los Libros de Cómics, el personaje apareció por primera vez en Journey into Mystery #83 (agosto de 1962) y fue creado por el dibujante Jack Kirby, el editor Stan Lee y el guionista Larry Lieber. Ha protagonizado varias series en curso y series limitadas, y es miembro fundador del equipo de superhéroes, Los Vengadores, apareciendo en diferentes números de esa serie. El personaje también ha en diversos productos de Marvel, incluidas series de televisión animadas, películas, videojuegos, ropa, juguetes y tarjetas de intercambio.</p>
+            <p>Dr. Don Blake, un estadounidense de vacaciones en Noruega, encontraba en una remota cueva un bastón mágico que al golpearlo, los convertía en el dios Thor y su martillo, justo a tiempo para detener una invasión de los hombres de piedra de Saturno. En el número siguiente, los autores presentan la rutina diaria del protagonista en su consulta médica y su amor oculto por la enfermera Jane Foster, transladándolos luego al imaginario país latinoamericano de San Diablo, donde, haciendo uso de los poderes de Thor, aplasta a la facción comunista que pretendía tomar el poder.</p>
           </div>
         </div>
       </div>
