--- a/sections/personajes.html
+++ b/sections/personajes.html
@@ -49,7 +49,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Thanos</a></li>
+                <li><a class="dropdown-item" href="./characters/thanos.html">Thanos</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -117,23 +117,20 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_7">
-          <a href="./comics/the_avengers.html">
+          <a href="./characters/spider-man.html">
             <div class="characterThumbnail-dark">
-              <h5>Spider-Man</h5>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_8">
-          <a href="./comics/the_x-men.html">
+          <a href="./characters/thor.html">
             <div class="characterThumbnail-dark">
-              <h5>Thor</h5>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-lg-4 characterThumbnail characterThumnail_9">
-          <a href="./comics/galactus.html">
+          <a href="./characters/thanos.html">
             <div class="characterThumbnail-dark">
-              <h5>Thanos</h5>
             </div>
           </a>
         </div>
