--- a/sections/characters/spider-man.html
+++ b/sections/characters/spider-man.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaptainComics - The Avengers</title>
+  <title>CaptainComics - Spider-Man</title>
   <link rel="icon" href="../../img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,18 +38,18 @@
                 Personajes
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="../characters/black_widow.html">Black Widow</a></li>
-                <li><a class="dropdown-item" href="../characters/captain_america.html">Captain America</a></li>
-                <li><a class="dropdown-item" href="../characters/deadpool.html">Deadpool</a></li>
-                <li><a class="dropdown-item" href="../characters/hawkeye.html">Hawkeye</a></li>
-                <li><a class="dropdown-item" href="../characters/hulk.html">Hulk</a></li>
-                <li><a class="dropdown-item" href="../characters/iron_man.html">Iron Man</a></li>
-                <li><a class="dropdown-item" href="../characters/spider-man.html">Spider-Man</a></li>
-                <li><a class="dropdown-item" href="../characters/thor.html">Thor</a></li>
+                <li><a class="dropdown-item" href="./black_widow.html">Black Widow</a></li>
+                <li><a class="dropdown-item" href="./captain_america.html">Captain America</a></li>
+                <li><a class="dropdown-item" href="./deadpool.html">Deadpool</a></li>
+                <li><a class="dropdown-item" href="./hawkeye.html">Hawkeye</a></li>
+                <li><a class="dropdown-item" href="./hulk.html">Hulk</a></li>
+                <li><a class="dropdown-item" href="./iron_man.html">Iron Man</a></li>
+                <li><a class="dropdown-item" href="./spider-man.html">Spider-Man</a></li>
+                <li><a class="dropdown-item" href="./thor.html">Thor</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="../characters/thanos.html">Thanos</a></li>
+                <li><a class="dropdown-item" href="./thanos.html">Thanos</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -67,7 +67,7 @@
       </div>
     </nav>
   </header>
-  <main class="col-lg-9 col-xs-12 mainComics">
+  <main class="col-lg-9 col-xs-12 mainCharacter">
     <div class="col-lg-12 col-xs-12 first_container">
       <div class="main__logo--title">
         <h1>Captain Comics</h1>
@@ -76,18 +76,25 @@
     </div>
     <div class="col-lg-12 col-xs-12 container-fluid">
       <div class="row col-lg-12 col-xs-12">
-        <div class="col-lg-4 col-xs-12 comicBigContainer">
-          <div class="comicThumbnail comicThumnail_7">
+        <div class="col-md-4 col-xs-12 characterBigContainer">
+          <div class="characterThumbnail characterThumnail_7">
 
           </div>
-          <div class="comicTitle">
-            <h6>The Avengers #1</h6>
+          <div class="characterTitle">
+            <h5>Spider-Man</h5>
+            <p>Peter Parker</p>
+            <p>Superhero</p>
+            <p>First appearance:</p>
+            <p>Amazing Fantasy #15</p>
+            <p>(August 1962)</p>
           </div>
         </div>
-        <div class="col-lg-8 col-xs-12 comicExplain">
-          <div class="comicExplainContainer">
-            <h3>The Avengers #1</h3>
-            <p>Loki pretende atraer a Thor a una trampa en la isla del Silencio, para ello trama un engaño, provoca un accidente de tren haciendo parecer que Hulk es el responsable. Rick Jones intenta avisar a los Cuatro Fantásticos para que intenten encontrar a Hulk antes de que lo haga el ejercito, pero su radioseñal es desviada por Loki para que sea escuchada por Thor, aunque también será escuchada por Iron Man, la Avispa y el Hombre Hormiga. En la sede de la Brigada Juvenil todos ellos son puestos al corriente de la situación, Thor desaparece persiguiendo a un falso Hulk, lo que le moverá a ir a la isla de Silencio a combatir con Loki. Por otra parte el resto de héroes intentan hacer entrar en razón al verdadero Hulk que está escondido en un circo haciéndose pasar por un robot. Finalmente Thor derrota a Loki y lo lleva a la Tierra para que confiese su engaño. Los cinco héroes, a sugerencia de la Avispa y el Hombre Hormiga, deciden unirse y formar Los Vengadores.</p>
+        <div class="col-md-8 col-xs-12 characterExplain">
+          <div class="characterExplainContainer">
+            <h3>Spider-Man</h3>
+            <p>Spider-Man, traducido en ocasiones como Hombre Araña, es un personaje creado por los estadounidenses Stan Lee y Steve Ditko,​ e introducido en el cómic Amazing Fantasy n.° 15, publicado por Marvel Comics en agosto de 1962.15​ Se trata de un superhéroe que emplea sus habilidades sobrehumanas, reminiscentes de una araña, para combatir a otros supervillanos que persiguen fines siniestros.</p>
+            <p>Su creación se remonta a principios de la década de 1960 como respuesta al creciente interés del público adolescente en los cómics y el éxito de Los 4 Fantásticos.​ Tras su primera aparición en Amazing Fantasy,​ Marvel decidió producir una serie individual titulada The Amazing Spider-Man, cuyo ejemplar inicial salió a la venta en marzo de 1963.​ Desde entonces se han distribuido otros varios cómics relacionados con el personaje, así como otros productos que han derivado en el establecimiento de una franquicia de medios.</p>
+            <p>Entre sus habilidades destacan la fuerza, el combate y la inteligencia, además de ser capaz de producir y lanzar telarañas sintéticas con ayuda de unos lanzadores que van sujetos a sus muñecas; trepar, adherirse y desplazarse a través de muros y edificaciones; y percibir peligros y amenazas a su alrededor de forma precognitiva gracias a su «sentido arácnido».</p>
           </div>
         </div>
       </div>
