--- a/sections/characters/thanos.html
+++ b/sections/characters/thanos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaptainComics - The Avengers</title>
+  <title>CaptainComics - Thanos</title>
   <link rel="icon" href="../../img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,18 +38,18 @@
                 Personajes
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="../characters/black_widow.html">Black Widow</a></li>
-                <li><a class="dropdown-item" href="../characters/captain_america.html">Captain America</a></li>
-                <li><a class="dropdown-item" href="../characters/deadpool.html">Deadpool</a></li>
-                <li><a class="dropdown-item" href="../characters/hawkeye.html">Hawkeye</a></li>
-                <li><a class="dropdown-item" href="../characters/hulk.html">Hulk</a></li>
-                <li><a class="dropdown-item" href="../characters/iron_man.html">Iron Man</a></li>
-                <li><a class="dropdown-item" href="../characters/spider-man.html">Spider-Man</a></li>
-                <li><a class="dropdown-item" href="../characters/thor.html">Thor</a></li>
+                <li><a class="dropdown-item" href="./black_widow.html">Black Widow</a></li>
+                <li><a class="dropdown-item" href="./captain_america.html">Captain America</a></li>
+                <li><a class="dropdown-item" href="./deadpool.html">Deadpool</a></li>
+                <li><a class="dropdown-item" href="./hawkeye.html">Hawkeye</a></li>
+                <li><a class="dropdown-item" href="./hulk.html">Hulk</a></li>
+                <li><a class="dropdown-item" href="./iron_man.html">Iron Man</a></li>
+                <li><a class="dropdown-item" href="./spider-man.html">Spider-Man</a></li>
+                <li><a class="dropdown-item" href="./thor.html">Thor</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="../characters/thanos.html">Thanos</a></li>
+                <li><a class="dropdown-item" href="./thanos.html">Thanos</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -67,7 +67,7 @@
       </div>
     </nav>
   </header>
-  <main class="col-lg-9 col-xs-12 mainComics">
+  <main class="col-lg-9 col-xs-12 mainCharacter">
     <div class="col-lg-12 col-xs-12 first_container">
       <div class="main__logo--title">
         <h1>Captain Comics</h1>
@@ -76,18 +76,24 @@
     </div>
     <div class="col-lg-12 col-xs-12 container-fluid">
       <div class="row col-lg-12 col-xs-12">
-        <div class="col-lg-4 col-xs-12 comicBigContainer">
-          <div class="comicThumbnail comicThumnail_7">
+        <div class="col-md-4 col-xs-12 characterBigContainer">
+          <div class="characterThumbnail characterThumnail_9">
 
           </div>
-          <div class="comicTitle">
-            <h6>The Avengers #1</h6>
+          <div class="characterTitle">
+            <h5>Thanos</h5>
+            <p>Thanatos</p>
+            <p>Supervillain</p>
+            <p>First appearance:</p>
+            <p>The Invincible Iron Man #55</p>
+            <p>(February 1973)</p>
           </div>
         </div>
-        <div class="col-lg-8 col-xs-12 comicExplain">
-          <div class="comicExplainContainer">
-            <h3>The Avengers #1</h3>
-            <p>Loki pretende atraer a Thor a una trampa en la isla del Silencio, para ello trama un engaño, provoca un accidente de tren haciendo parecer que Hulk es el responsable. Rick Jones intenta avisar a los Cuatro Fantásticos para que intenten encontrar a Hulk antes de que lo haga el ejercito, pero su radioseñal es desviada por Loki para que sea escuchada por Thor, aunque también será escuchada por Iron Man, la Avispa y el Hombre Hormiga. En la sede de la Brigada Juvenil todos ellos son puestos al corriente de la situación, Thor desaparece persiguiendo a un falso Hulk, lo que le moverá a ir a la isla de Silencio a combatir con Loki. Por otra parte el resto de héroes intentan hacer entrar en razón al verdadero Hulk que está escondido en un circo haciéndose pasar por un robot. Finalmente Thor derrota a Loki y lo lleva a la Tierra para que confiese su engaño. Los cinco héroes, a sugerencia de la Avispa y el Hombre Hormiga, deciden unirse y formar Los Vengadores.</p>
+        <div class="col-md-8 col-xs-12 characterExplain">
+          <div class="characterExplainContainer">
+            <h3>Thanos</h3>
+            <p>Thanos es un megavillano ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. Creado por el escritor y artista Jim Starlin, el personaje apareció por primera vez en The Invincible Iron Man #55 (febrero de 1973). Su nombre es en parte un juego de palabras que hace referencia al término griego Θάνατος (Thánatos, "muerte"), pero sobre todo es una deformación del nombre del dios de la muerte no violenta, Tánatos. És hijo de Mentor y hermano de Starfox. Se trata de uno de los villanos más poderosos de todo el Universo Marvel, y se ha enfrentado a muchos héroes, incluidos los Vengadores, los Guardianes de la Galaxia, los Cuatro Fantásticos, los X-Men y otros.</p>
+            <p>Thanos nació en el planeta Titán como el hijo de los Eternos Mentor (A'Lars) y Sui-San, y su hermano es Eros de Titán, también conocido como Starfox. Thanos lleva el gen Deviants, y como tal, comparte la apariencia física de la raza de los primos Eternos. Al nacer, su madre se sorprendió por su apariencia e intentó matarlo, debido a que creía que su hijo aniquilaría toda la vida en el universo, pero fue detenido por A'lars, el padre de Thanos. Durante sus años escolares, Thanos era un pacifista ​y solo jugaba con su hermano Eros y sus mascotas. En la adolescencia, Thanos se había fascinado con el nihilismo y la muerte, adorando y finalmente enamorándose de la encarnación física de la muerte, la señora Muerte. ​Como adulto, Thanos aumentó su fuerza física y sus poderes a través de su conocimiento científico superior. También intentó crear una nueva vida para sí mismo al engendrar muchos niños y convertirse en pirata. No encuentra ninguna satisfacción en ninguno de los dos hasta que es visitado nuevamente por Señora Muerte, por quien asesina a su descendencia y su capitán pirata.</p>
           </div>
         </div>
       </div>
