Adding content to contact.html

--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -74,6 +74,39 @@
         <p>Tus cómics favoritos en un solo lugar.</p>
       </div>
     </div>
+    <div class="container contactoContainer">
+      <div class="row contactoFila">
+        <div class="col-xs-12 col-lg-8">
+          <div class="contactoTexto">
+            <h3>Redes sociales</h3>
+            <p>Si necesitas comunicarte conmigo, podés hacerlo por los siguientes medios:</p>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12 contactoCol">
+                  <p class="contactoLink">Correo: <a href="">nagen01@gmail.com</a></p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 contactoCol">
+                  <p class="contactoLink">Github: <a href="https://github.com/NahuelGenchi" target="_blank">github.com/NahuelGenchi</a></p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 contactoCol">
+                  <p class="contactoLink">LinkedIn: <a href="https://www.linkedin.com/in/nahuel-genchi-25b607174/" target="_blank">ir al sitio</a></p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 contactoCol">
+                  <p class="contactoLink">WhatsApp: <a href="">+54 11 6283-8700</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-lg-4"></div>
+      </div>
+    </div>
   </main>
   <footer class="col-lg-9 col-xs-12 footer">
     <span>© 2022 Copyright:&#160</span>
